--- a/todoit-app-frontend/src/app/todolist/todolist.component.html
+++ b/todoit-app-frontend/src/app/todolist/todolist.component.html
@@ -1,5 +1,48 @@
 <h1 class="header">To Do List</h1>
-<form class="form-inline md-form mr-auto mb-4">
-  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-  <button mdbBtn size="sm" gradient="aqua" rounded="true" class="my-0 waves-light" mdbWavesEffect type="submit">Search</button>
-</form>
+<br>
+<div class="search">
+  <button class="btnAddAssignee btn btn-secondary">Add New Assignee</button>
+  <button class="btnAddTask btn btn-primary">Add New Task</button>
+      <form class="frm">
+          <input type="text" class="searchInput" placeholder="Search">
+          <button type="submit" class="btn"><i class="fas fa-search"></i></button>
+      </form>
+</div>
+<br>
+<div class="container">
+<table class="table">
+  <thead>
+  <tr>
+    <th scope="col">#</th>
+    <th scope="col">Description</th>
+    <th scope="col">Date</th>
+    <th scope="col">Assign to</th>
+    <th scope="col">Actions</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <th scope="row"><div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+      </label>
+    </div></th>
+    <td>Buy shoes</td>
+    <td>20-04-2021</td>
+    <td>Anna</td>
+    <td>Edit</td>
+  </tr>
+  <tr>
+    <th scope="row"><div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+      </label>
+    </div></th>
+    <td>Call Mum</td>
+    <td>08-04-2021</td>
+    <td>David</td>
+    <td>Edit</td>
+  </tr>
+  </tbody>
+</table>
+</div>
