added routes to buttons

--- a/todoit-app-frontend/src/app/todolist/todolist.component.html
+++ b/todoit-app-frontend/src/app/todolist/todolist.component.html
@@ -1,8 +1,8 @@
 <h1 class="header">To Do List</h1>
 <br>
 <div class="search">
-  <button class="btnAddAssignee btn btn-secondary">Add New Assignee</button>
-  <button class="btnAddTask btn btn-primary">Add New Task</button>
+  <button class="btnAddAssignee btn btn-secondary" routerLink="/assignees">Add New Assignee</button>
+  <button class="btnAddTask btn btn-primary" routerLink="/task">Add New Task</button>
       <form class="frm">
           <input type="text" class="searchInput" placeholder="Search">
           <button type="submit" class="btn"><i class="fas fa-search"></i></button>
