--- a/todoit-app-frontend/src/app/todolist/todolist.component.html
+++ b/todoit-app-frontend/src/app/todolist/todolist.component.html
@@ -23,7 +23,7 @@
   <tbody>
   <tr>
     <th scope="row"><div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" [(ngModel)]="taskCompleted" (click)="updateTaskCompletion()">
       <label class="form-check-label" for="flexCheckDefault">
       </label>
     </div></th>
